<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="#00FFFFFF"
    tools:context=".LupaPasswordActivity">

    <ImageView
        android:id="@+id/bg_login_footer"
        android:layout_width="700dp"
        android:layout_height="700dp"
        android:layout_marginBottom="-325dp"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bg_login" />

    <ImageView
        android:id="@+id/bg_login_header"
        android:layout_width="700dp"
        android:layout_height="700dp"
        android:layout_marginStart="-180dp"
        android:layout_marginTop="-550dp"
        android:contentDescription="@string/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_login" />

    <TextView
        android:id="@+id/masuk_akun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/text"
        android:fontFamily="@font/balsamiqsans"
        android:text="@string/memulihkan_akun"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bg_login_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <TextView
        android:id="@+id/halo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/text"
        android:fontFamily="@font/balsamiqsans"
        android:text="@string/halo"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/bg_login_header"
        app:layout_constraintEnd_toEndOf="@+id/masuk_akun"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/masuk_akun"
        app:layout_constraintTop_toBottomOf="@+id/masuk_akun"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/halo5"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/text"
        android:fontFamily="@font/balsamiqsans"
        android:gravity="center"
        android:text="@string/keterangan_lupa"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bg_login_footer"
        app:layout_constraintEnd_toEndOf="@+id/et_email_lupa"
        app:layout_constraintStart_toStartOf="@+id/et_email_lupa"
        app:layout_constraintTop_toBottomOf="@+id/et_email_lupa"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/halo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/text"
        android:fontFamily="@font/balsamiqsans"
        android:text="@string/alamat_email"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_email_lupa"
        app:layout_constraintEnd_toEndOf="@+id/et_email_lupa"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_email_lupa" />

    <TextView
        android:id="@+id/teks1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="23dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/text"
        android:fontFamily="@font/balsamiqsans"
        android:text="@string/daftar_dengan_akun_google"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/btn_lanjut_lupa" />

    <Button
        android:id="@+id/btn_ke_masuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="150dp"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        android:contentDescription="@string/text"
        android:fontFamily="@font/balsamiqsans"
        android:text="@string/sudah_punya_akun_masuk"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/btn_lanjut_lupa" />

    <ImageButton
        android:id="@+id/btn_lanjut_lupa"
        android:layout_width="364dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        android:contentDescription="@string/button"
        android:text="@string/lanjut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg_login_footer"
        app:srcCompat="@drawable/btn_yellow" />

    <TextView
        android:id="@+id/lanjut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:fontFamily="@font/balsamiqsans"
        android:text="@string/lanjut"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_lanjut_lupa"
        app:layout_constraintEnd_toEndOf="@+id/btn_lanjut_lupa"
        app:layout_constraintStart_toStartOf="@+id/btn_lanjut_lupa"
        app:layout_constraintTop_toTopOf="@+id/btn_lanjut_lupa" />

    <EditText
        android:id="@+id/et_email_lupa"
        android:layout_width="364dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/edittext"
        android:contentDescription="@string/text"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="2dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg_login_header"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="83dp"
        android:layout_height="20dp"
        android:layout_marginTop="35dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/text"
        app:layout_constraintStart_toStartOf="@+id/btn_lanjut_lupa"
        app:layout_constraintTop_toBottomOf="@+id/lanjut"
        app:srcCompat="@drawable/line" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="83dp"
        android:layout_height="20dp"
        android:layout_marginTop="35dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/text"
        app:layout_constraintEnd_toEndOf="@+id/btn_lanjut_lupa"
        app:layout_constraintTop_toBottomOf="@+id/lanjut"
        app:srcCompat="@drawable/line" />

    <ImageView
        android:id="@+id/btn_google_daftar"
        android:layout_width="364dp"
        android:layout_height="50dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/text"
        app:layout_constraintBottom_toTopOf="@+id/btn_ke_masuk"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/teks1"
        app:srcCompat="@drawable/edittext" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="135dp"
        android:contentDescription="@string/text"
        app:layout_constraintBottom_toBottomOf="@+id/btn_google_daftar"
        app:layout_constraintStart_toStartOf="@+id/btn_google_daftar"
        app:layout_constraintTop_toTopOf="@+id/btn_google_daftar"
        app:srcCompat="@drawable/ic_google" />

    <TextView
        android:id="@+id/teks3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/text"
        android:fontFamily="@font/balsamiqsans"
        android:text="@string/google"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_google_daftar"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/btn_google_daftar" />

</androidx.constraintlayout.widget.ConstraintLayout>